# Finmem

./: .env.example  .env.phase1  .gitignore  DEPLOYMENT_CHECKLIST.md  DESIGN.md  DESIGN_NOTES.md  FEATURES_ADDED.md  FINMEM_COMPLETE_GUIDE.md  FINMEM_CONTEXT.md  FINMEM_USER_FLOW_ARCHITECTURE.md  Makefile  PHASE1_ARCHITECTURE.md  PHASE1_DELIVERABLES.md  PHASE1_DEPLOYMENT_CHECKLIST.md  PHASE1_IMPLEMENTATION.md  PHASE1_QUICKSTART.md  PHASE1_SETUP.md  PHASE1_SUMMARY.txt  PHASE2_VALIDATION_REFACTOR.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: chat_endpoints.py  chat_manager.py  chat_schemas.py  db.py  endpoints.py  episodes.py  main.py  query_engine.py  query_parser.py  reasoning.py  response_formatter.py  scheduler.py  schemas.py  similarity_search.py
data/: market_cache.parquet  users.json
docs/: PHASE3_EPISODIC_REASONING.md  PHASE4_CHAT_INTERFACE.md  PROJECT_SUMMARY.md  system-diagram.html
eval/: ablation.py  benchmark.py  latency.py  local_ablation.py
finmem/data/: episode_builder.py  loaders.py  schemas.py
finmem/interface/: chat.py  dashboard.py  watch.py
finmem/memory/: embeddings.py  hmm_regime.pkl  regime.py  retrieval.py  store.py
scripts/: analyze_precursors.py  create_embeddings.py  demo.py  detect_episodes.py  detect_episodes_incremental.py  index_lancedb.py  ingest.py  ingest_market_data.py  init_db.py  run_phase2.py  test_phase3.py  test_phase4.py
tests/: test_confidence.py  test_episode_builder.py  test_retrieval.py
web/: package-lock.json  package.json
web/app/: page.tsx  (+4 more)
(+34 files in other folders)
