[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finmem"
version = "0.1.0"
description = "Financial Episodic Memory System"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "fredapi>=0.5.2",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ruptures>=1.1.9",
    "lancedb>=0.8.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "statsmodels>=0.14.0",
    "scipy>=1.13.0",
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.5.0",
    "hmmlearn>=0.3.0",
    "schedule>=1.2.2",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
finmem = "finmem.interface.chat:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
